# paper-asset-pricing

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  hello.py  publish.sh  pyproject.toml  pytest.ini  ruff.toml  test.py
.github/workflows/: ci.yaml  format.yaml
aggregator/: __init__.py  aggregate.py  schema.py
configs/aggregate/: aggregate_config.yaml  aggregate_config_cut.yaml  aggregate_config_mock.yaml
configs/experiment/: OLS3_20years.yaml  experiment_config_NN_RELU.yaml  experiment_config_ols.yaml  experiment_config_ols3_cut.yaml  experiment_config_ols_cut.yaml  experiment_config_ols_mock.yaml
configs/portfolio/: portfolio_config.yaml  portfolio_config_VAL90.yaml  portfolio_config_VAL95.yaml
configs/train/: train_config_huber.yaml  train_config_ols.yaml  train_config_ols3.yaml
connectors/local/: local_loader.py
core/: settings.py
example/GuKellyXiu_EmpiricalAssetPricingViaML/: README.md
example/GuKellyXiu_EmpiricalAssetPricingViaML/configs/: data-config.yaml  models-config.yaml  portfolio-config.yaml
example/GuKellyXiu_EmpiricalAssetPricingViaML/scripts/: macro_data.py
examples/: .gitignore  aggregate_config.yaml
examples/DataExampleProject/: .gitignore  README.md
examples/DataExampleProject/configs/: data-config.yaml  models-config.yaml  paper-project.yaml  portfolio-config.yaml
examples/DataExampleProject/scripts/: firm_synthetic.py  macro_synthetic.py
examples/GuKellyXiu_EmpiricalAssetPricingViaML/: .gitignore  README.md
examples/GuKellyXiu_EmpiricalAssetPricingViaML/configs/: data-config.yaml  models-config.yaml  paper-project.yaml  portfolio-config.yaml
examples/GuKellyXiu_EmpiricalAssetPricingViaML/scripts/: convert_rf_rates.py  macro_data.py  preprocess_returns.py  process_dates.py
examples/ModelExampleProject/: .gitignore  README.md
examples/ModelExampleProject/configs/: data-config.yaml  models-config.yaml  paper-project.yaml
examples/OnlineDataExampleProject/: .gitignore  README.md
examples/OnlineDataExampleProject/configs/: data-config.yaml  paper-project.yaml  portfolio-config.yaml
examples/PortfolioExampleProject/: .gitignore  EXTRA_README.md  README.md
examples/PortfolioExampleProject/configs/: data-config.yaml  models-config.yaml  paper-project.yaml  portfolio-config.yaml
features/: compustat_annual_features.py
features_extraction/: README.md  compustat_annual_features.py  crsp_linking_attempt.py
paper-asset-pricing/: README.md  pyproject.toml
paper-asset-pricing/src/paper_asset_pricing/: cli.py
paper-asset-pricing/tests/: test_cli.py
paper-data/: README.md  pyproject.toml
paper-data/examples/: .gitignore
paper-data/examples/cli/: tutorial.md
paper-data/examples/ingestion/: example_ingestion.py
paper-data/examples/synthetic_data/: .gitignore  data-config.yaml  firm_synthetic.csv  firm_synthetic.py  macro_synthetic.csv  macro_synthetic.py
paper-data/examples/wrangling/: example_analyze.py  sample_data.csv
paper-data/src/paper_data/: __init__.py  cache.py  cli.py  config.py  config_parser.py  main.py  manager.py  run_pipeline.py
paper-data/src/paper_data/ingestion/: __init__.py  base.py  google_drive.py  google_sheets.py  http.py  huggingface_ds.py  local.py  wrds_conn.py
paper-data/src/paper_data/schema/: firm.py  macro.py
paper-data/src/paper_data/wrangling/: __init__.py  augmenter.py  cleaner.py
paper-data/src/paper_data/wrangling/analyzer/: analyzer.py  ui.py
paper-data/src/paper_data/wrangling/cleaner/: cleaner.py
paper-data/tests/: test_config_parser.py  test_config_parser_data.py  test_manager.py  test_manager_data.py  test_run_pipeline_data.py
paper-data/tests/ingestion/: test_base.py  test_google_drive.py  test_google_sheets.py  test_http.py  test_huggingface_ds.py  test_local.py  test_wrds_conn.py
paper-data/tests/schema/: test_firm_schema.py  test_macro_schema.py
paper-data/tests/wrangling/: test_augmenter.py  test_cleaner.py
paper-data/tests/wrangling/analyzer/: test_analyzer.py  test_ui.py
paper-data/tests/wrangling/cleaner/: test_cleaner.py
paper-model/: README.md  pyproject.toml
paper-model/examples/anonymized_data/: firm_chars.csv  firm_ret.csv  macro.csv  models-config.yaml
paper-model/examples/synthetic_data/: synthetic_factors.csv  synthetic_factors.py
paper-model/src/paper_model/: __init__.py  cache.py  config_parser.py  manager.py  run_pipeline.py
paper-model/src/paper_model/evaluation/: __init__.py  metrics.py  reporter.py
paper-model/src/paper_model/models/: __init__.py  base.py  fama_french.py  linear_regression.py  sklearn_model.py  torch_model.py
paper-model/tests/: test_manager_model.py  test_model_config_parser.py  test_run_pipeline_model.py
paper-model/tests/evaluation/: test_metrics_model.py  test_reporter_model.py
paper-model/tests/models/: test_sklearn_model.py  test_torch_model.py
paper-portfolio/: README.md  pyproject.toml
paper-portfolio/examples/: portfolio-config.yaml  readme.md
paper-portfolio/src/paper_portfolio/: __init__.py  cache.py  config_parser.py  manager.py  run_pipeline.py
paper-portfolio/src/paper_portfolio/evaluation/: __init__.py  metrics.py  reporter.py
paper-portfolio/tests/: test_config_parser_portfolio.py  test_manager_portfolio.py  test_run_pipeline_portfolio.py
paper-portfolio/tests/evaluation/: test_metrics_portfolio.py  test_reporter_portfolio.py
paper-tools/: README.md  pyproject.toml
paper-tools/src/paper_tools/: __init__.py  __main__.py  cache.py  cli.py
paper-tools/src/paper_tools/templates/: paper_project.yaml.template  project_readme.md.template
paper-tools/tests/: test_cli.py
scripts/: aggregate_data.py  generate_mock_data.py  inspect_parquet.ipynb  macro_extraction.py  split_dataset_by_date.py
src/paperassetpricing/: cli.py  settings.py
src/paperassetpricing/commands/: __init__.py  aggregate.py  experiment.py  macro_extraction.py  portfolio.py
src/paperassetpricing/etl/: aggregator.py  schema.py
tests/: conftest.py  test_aggregator.py  test_experiment.py  test_portfolio.py
tests/data/: firm.csv  macro.csv  ret.csv
(+65 files in other folders)
