[project]
name = "paper-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lorenzo Varese", email = "55581163+lorenzovarese@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "gspread>=6.2.1",
    "pandas>=2.2.3",
    "pandera>=0.24.0",
    "requests>=2.32.3",
    "wrds>=3.3.0",
    "ydata-profiling>=4.16.1",
]

[project.scripts]
paper-data = "paper_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
