[project]
name = "paper-data"
version = "0.1.0"
description = "Data ingestion and preprocessing tools for asset pricing research."
readme = "README.md"
authors = [
    { name = "Lorenzo Varese", email = "55581163+lorenzovarese@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "pandas>=2.2.3",
    "pandera[polars]>=0.24.0",
    "polars>=1.30.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "wrds>=3.3.0",
    "ydata-profiling>=4.16.1",
]

[project.scripts]
paper-data = "paper_data.run_pipeline:main" # entry point for debug purposes

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_data"]

[tool.hatch.build.targets.sdist]
include = ["src/paper_data/**", "README.md", "LICENSE"] # optional sdist config 

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.0.20250515",
]
