[project]
name = "paper-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lorenzo Varese", email = "55581163+lorenzovarese@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
paper-portfolio = "paper_portfolio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
