[project]
name = "paper-tools"
version = "0.1.0"
description = "A comprehensive suite of tools for asset pricing research, data, modeling, and portfolio analysis"
readme = "README.md"
authors = [
    { name = "Lorenzo Varese", email = "55581163+lorenzovarese@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.2", "typer>=0.16.0"]
# Core paper-tools might have no dependencies itself, or very few.
# dependencies = []

[project.scripts]
paper = "paper_tools.cli:app"

[project.optional-dependencies]
data = ["paper-data~=0.1.0"]
models = ["paper-model~=0.1.0"]
# When paper-tools[portfolio] is installed, it will pull in paper-portfolio.
# paper-portfolio itself declares dependencies on paper-data and paper-model.
portfolio = ["paper-portfolio~=0.1.0"]

# An 'all' extra is common for installing everything
all = ["paper-tools[data]", "paper-tools[models]", "paper-tools[portfolio]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# paper-tools might have a minimal src/paper_tools/__init__.py
packages = ["src/paper_tools"]

[tool.hatch.build.targets.sdist]
include = ["src/paper_tools/**", "README.md", "LICENSE"]
